syntax = "proto3";

import "google/protobuf/empty.proto";

package api;
option go_package = "./internal/server/grpc/pb;pb";

service BannerRotator {
  rpc AddBannerToSlot(AddBannerToSlotRequest) returns (AddBannerToSlotResponse) {}
  rpc RemoveBannerFromSlot(RemoveBannerFromSlotRequest) returns (google.protobuf.Empty) {}
  rpc Click(ClickRequest) returns (google.protobuf.Empty) {}
  rpc Banner(BannerRequest) returns (BannerResponse) {}
}

message AddBannerToSlotRequest {
  message NewBanner {
    string name = 2;
  }
  NewBanner banner = 1;
}

message AddBannerToSlotResponse {
  Banner banner = 1;
}


message RemoveBannerFromSlotRequest {
  Banner banner = 1;
}

message ClickRequest {
  uint64 banner_id = 1;
  uint64 slot_id = 2;
  uint64 group_id = 3;
}


message BannerRequest {
  uint64 group_id = 1;
  uint64 slot_id = 2;
}

message BannerResponse {
  Banner banner = 1;
}

message Banner {
  uint64 id = 1;
  string name = 2;
}